Fix: handlers, template prometheus, ajout alertmanager

--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -6,49 +6,66 @@
 # Contrôleur principal (où tourne Ansible)
 # ------------------------------
 [controller]
-zt-controller ansible_host=192.168.30.5 ansible_user=elicha
+zt-controller ansible_host=192.168.30.5 ansible_user=elicha ansible_connection=ssh
 
 # ------------------------------
 # Bastion (sas d’accès sécurisé)
 # ------------------------------
 [bastion]
-zt-bastion ansible_host=192.168.30.8 ansible_user=elicha_bastion
+zt-bastion ansible_host=192.168.30.8 ansible_user=elicha_bastion ansible_connection=ssh
 
 # ------------------------------
 # Serveurs applicatifs
 # ------------------------------
 [apps]
-zt-app ansible_host=192.168.30.6 ansible_user=elicha_app
+zt-app ansible_host=192.168.30.6 ansible_user=elicha_app ansible_connection=ssh
 
 # ------------------------------
 # Serveur de supervision (Prometheus, Grafana)
 # ------------------------------
 [monitoring]
-zt-monitor ansible_host=192.168.30.7 ansible_user=elicha_monitor
+zt-monitor ansible_host=192.168.30.7 ansible_user=elicha_monitor ansible_connection=ssh
 
 # ------------------------------
-# Machine cliente (ton poste d’administration)
+# Machine cliente (poste d’administration)
 # ------------------------------
 [client]
-zt-client ansible_host=192.168.30.132 ansible_user=aelicha
+zt-client ansible_host=192.168.30.132 ansible_user=aelicha ansible_connection=ssh
+
+# ------------------------------
+# Nouvelles machines Windows et Linux
+# ------------------------------
+[windows]
+# Primo : simple client Windows
+client_win ansible_host=192.168.30.4 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
+
+# HMailServer : serveur mail Windows
+gt-mail ansible_host=192.168.40.10 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
+
+# Active Directory / LDAP : Windows Server
+gt-dc ansible_host=192.168.30.10 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
+
+[linux]
+# Asterisk : serveur VoIP Linux
+gt-voip ansible_host=192.168.40.20 ansible_user=elicha ansible_connection=ssh
 
 # ------------------------------
 # Groupe logique : toutes les machines à superviser
-# (celles sur lesquelles on installe Node Exporter)
 # ------------------------------
 [exporters:children]
+controller
 bastion
 apps
 monitoring
+client
+windows
+linux
 
 # ------------------------------
 # Variables globales (communes à tous les hôtes)
 # ------------------------------
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
-[all:vars]
 ansible_become=yes
 ansible_become_method=sudo
 ansible_become_user=root
-ansible_become_password=
-
