--- a/ansible/roles/monitoring-stack/tasks/main.yml
+++ b/ansible/roles/monitoring-stack/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: install docker and docker-compose
   apt:
     name:
@@ -18,7 +19,7 @@
     state: directory
     mode: '0755'
 
-- name: create docker-compose.yml
+- name: create docker-compose.yml with Alertmanager
   copy:
     dest: /home/{{ ansible_user }}/monitoring/docker-compose.yml
     content: |
@@ -28,8 +29,24 @@
           image: prom/prometheus:latest
           volumes:
             - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+            - ./alert_rules.yml:/etc/prometheus/alert_rules.yml:ro
+          command:
+            - '--config.file=/etc/prometheus/prometheus.yml'
+            - '--storage.tsdb.path=/prometheus'
+            - '--web.enable-lifecycle'
           ports:
             - "9090:9090"
+          restart: unless-stopped
+
+        alertmanager:
+          image: prom/alertmanager:latest
+          volumes:
+            - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
+          command:
+            - '--config.file=/etc/alertmanager/alertmanager.yml'
+            - '--storage.path=/alertmanager'
+          ports:
+            - "9093:9093"
           restart: unless-stopped
 
         grafana:
@@ -50,18 +67,120 @@
 
       volumes:
         grafana-data:
+  notify: restart monitoring stack
 
-- name: create prometheus.yml
-  copy:
+- name: render prometheus.yml from template
+  template:
+    src: prometheus.yml.j2
     dest: /home/{{ ansible_user }}/monitoring/prometheus.yml
-    content: |
-      global:
-        scrape_interval: 15s
+    mode: '0644'
+  notify: restart monitoring stack
 
-      scrape_configs:
-        - job_name: 'node_exporter'
-          static_configs:
-            - targets: ['192.168.30.5:9100', '192.168.30.6:9100', '192.168.30.7:9100']
+#- name: create alert_rules.yml
+#  copy:
+#    dest: /home/{{ ansible_user }}/monitoring/alert_rules.yml
+#    content: |
+#      groups:
+#        - name: infrastructure_alerts
+#          interval: 30s
+#          rules:
+#            - alert: InstanceDown
+#              expr: up == 0
+#              for: 1m
+#              labels:
+#                severity: critical
+#              annotations:
+#                #summary: "Instance {{ $labels.instance }} est DOWN"
+#                #description: "L'instance {{ $labels.instance }} du job {{ $labels.job }} est injoignable depuis plus d'1 minute."
+#                summary: {% raw %}Instance {{ $labels.instance }} est DOWN{% endraw %}
+#                description: {% raw %}L'instance {{ $labels.instance }} du job {{ $labels.job }} est injoignable...{% endraw %}
+
+#            - alert: HighCPUUsage
+#              expr: 100 - (avg by(instance) (irate(node_cpu_seconds_total{mode="idle"}[5m])) * 100) > 80
+#              for: 5m
+#              labels:
+#                severity: warning
+#              annotations:
+#                #summary: "CPU élevé sur {{ $labels.instance }}"
+#                #description: "Utilisation CPU à {{ $value }}% depuis 5 minutes."
+#                summary: {% raw %}CPU élevé sur {{ $labels.instance }}{% endraw %}
+#                description: {% raw %}Utilisation CPU à {{ $value }}% depuis 5 minutes.{% endraw %}
+- name: create alert_rules.yml
+  copy:
+    src: alert_rules.yml
+    dest: /home/{{ ansible_user }}/monitoring/alert_rules.yml
+  notify: restart monitoring stack
+
+
+#            - alert: HighMemoryUsage
+#              expr: (1 - (node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes)) * 100 > 85
+#              for: 5m
+#              labels:
+#                severity: warning
+#              annotations:
+#                #summary: "Mémoire élevée sur {{ $labels.instance }}"
+#                #description: "Utilisation mémoire à {{ $value }}%."
+#                summary: {% raw %}Mémoire élevée sur {{ $labels.instance }}{% endraw %}
+#                description: {% raw %}Utilisation mémoire à {{ $value }}%.{% endraw %}
+
+
+#  notify: restart monitoring stack
+
+#- name: create alertmanager.yml
+#  copy:
+ #   dest: /home/{{ ansible_user }}/monitoring/alertmanager.yml
+  #  content: |
+   #   global:
+    #    resolve_timeout: 5m
+     #   smtp_from: 'alerts@germe-tech.local'
+      #  smtp_smarthost: '192.168.40.10:25'
+       # smtp_require_tls: false
+
+      #route:
+       # group_by: ['alertname', 'instance']
+        #group_wait: 10s
+        #group_interval: 10s
+#        repeat_interval: 12h
+#        receiver: 'default'
+ #       routes:
+  #        - match:
+   #           severity: critical
+    #        receiver: 'critical-alerts'
+     #     - match:
+      #        severity: warning
+       #     receiver: 'warning-alerts'
+#
+#      receivers:
+ #       - name: 'default'
+  #        email_configs:
+   #         - to: 'admin@germe-tech.local'
+    #          headers:
+     #           Subject: '[Alerte] {{ .GroupLabels.alertname }}'
+
+      #  - name: 'critical-alerts'
+       #   email_configs:
+        #    - to: 'alerts@germe-tech.local'
+         #     headers:
+          #      Subject: '[CRITIQUE] {{ .GroupLabels.alertname }}'
+
+#        - name: 'warning-alerts'
+ #         email_configs:
+         #   - to: 'alerts@germe-tech.local'
+        #      headers:
+       #         Subject: '[Warning] {{ .GroupLabels.alertname }}'
+
+      #inhibit_rules:
+     #   - source_match:
+    #        severity: 'critical'
+   #       target_match:
+  #          severity: 'warning'
+ #         equal: ['alertname', 'instance']
+#  notify: restart monitoring stack
+- name: create alertmanager.yml
+  copy:
+    src: alertmanager.yml
+    dest: /home/{{ ansible_user }}/monitoring/alertmanager.yml
+  notify: restart monitoring stack
 
 - name: launch monitoring stack
   command: docker-compose up -d
