correction du fichier hosts.ini

--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -45,6 +45,13 @@ gt-mail ansible_host=192.168.40.10 ansible_user=Administrateur ansible_connectio
 # Active Directory / LDAP : Windows Server
 gt-dc ansible_host=192.168.30.10 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
 
+[windows:vars]
+ansible_connection=winrm
+ansible_shell_type=powershell
+ansible_port=5985
+ansible_become=false
+
+
 [linux]
 # Asterisk : serveur VoIP Linux
 gt-voip ansible_host=192.168.40.20 ansible_user=elicha ansible_connection=ssh
