Add Active Directory role and deploy playbook for Windows Server 2019

--- a/ansible/playbooks/ping_windows.yml
+++ b/ansible/playbooks/ping_windows.yml
@@ -1,6 +1,7 @@
 - name: Test de connectivité Windows
   hosts: windows
   gather_facts: no
+  become: false
   tasks:
     - name: Ping WinRM
       win_ping:
