--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -37,10 +37,9 @@ zt-client ansible_host=192.168.30.132 ansible_user=aelicha ansible_connection=ss
 # ------------------------------
 [windows]
 # Primo : simple client Windows
-client_win ansible_host=192.168.30.4 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
-
-# HMailServer : serveur mail Windows
-gt-mail ansible_host=192.168.40.10 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
+#client_win ansible_host=192.168.30.4 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
+client_win ansible_host=192.168.30.4 ansible_user=ansible_admin ansible_password=Elicha7agbo ansible_connection=winrm ansible_winrm_transport=basic ansible_winrm_server_cert_validation=ignore
+client_win2 ansible_host=192.168.50.10 ansible_user=client_win2 ansible_password=Elicha7agbo ansible_connection=winrm ansible_winrm_transport=basic ansible_winrm_server_cert_validation=ignore
 
 # Active Directory / LDAP : Windows Server
 gt-dc ansible_host=192.168.30.10 ansible_user=Administrateur ansible_connection=winrm ansible_winrm_transport=basic
@@ -54,7 +53,8 @@ ansible_become=false
 
 [linux]
 # Asterisk : serveur VoIP Linux
-gt-voip ansible_host=192.168.40.20 ansible_user=elicha ansible_connection=ssh
+gt-voip ansible_host=192.168.40.20 ansible_user=elicha_voip ansible_connection=ssh
+gt-mail ansible_host=192.168.40.10 ansible_user=elicha_mail ansible_connection=ssh 
 
 # ------------------------------
 # Groupe logique : toutes les machines à superviser
