--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,7 +1,18 @@
 [defaults]
+inventory = ./hosts.ini
 roles_path = ./roles
 collections_path = ./collections
-transport = winrm
+host_key_checking = False
+timeout = 30
+interpreter_python = /usr/bin/python3
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_user = root
+
+[ssh_connection]
+pipelining = True
 
 [winrm]
 allow_unencrypted = true
